--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@ s
                 <a href="https://twitter.com/SopuluCrystal"><i class="fa fa-twitter"></i></a>
                 <a href=https://www.facebook.com/catherine.egwuatu/> <i class="fa fa-facebook-f"></i></a>
                 <a href=https://www.instagram.com/catherineegwuatu/> <i class="fa fa-instagram"></i></a>
-                <a href=https://www.egwuatusopuluchukwu@gmail.com/> <i class="fa fa-mail"></i></a>
+                <a href=https://www.egwuatusopuluchukwu@gmail.com/> <i class="fa fa-facebook"></i></a>
             </div>
         </div>
     </sidebar>
