--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@ s
 
 <body>
     <header>
-        <h1>My Portfolio</h1>
+        <h1>My Resume</h1>
     </header>
     <img src="" class="image">
 
